// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`options > getDefaultParams 1`] = `
{
  "appName": null,
  "bootstrap": true,
  "config": {
    "id": null,
    "params": {
      "send_page_view": false,
    },
  },
  "customPreconnectOrigin": "https://www.googletagmanager.com",
  "customResourceURL": "https://www.googletagmanager.com/gtag/js",
  "defaultGroupName": "default",
  "deferScriptLoad": false,
  "disableScriptLoad": false,
  "enabled": true,
  "globalDataLayerName": "dataLayer",
  "globalObjectName": "gtag",
  "includes": null,
  "onAfterTrack": null,
  "onBeforeTrack": null,
  "onError": null,
  "onReady": null,
  "pageTrackerEnabled": true,
  "pageTrackerExcludedRoutes": [],
  "pageTrackerPrependBase": true,
  "pageTrackerScreenviewEnabled": false,
  "pageTrackerSkipSamePath": true,
  "pageTrackerTemplate": null,
  "pageTrackerUseFullPath": false,
}
`;

exports[`options > set and get options 1`] = `
{
  "appName": null,
  "bootstrap": true,
  "config": {
    "id": 1,
    "params": {
      "send_page_view": false,
    },
  },
  "customPreconnectOrigin": "https://www.googletagmanager.com",
  "customResourceURL": "https://www.googletagmanager.com/gtag/js",
  "defaultGroupName": "default",
  "deferScriptLoad": false,
  "disableScriptLoad": false,
  "enabled": true,
  "globalDataLayerName": "dataLayer",
  "globalObjectName": "gtag",
  "includes": null,
  "onAfterTrack": null,
  "onBeforeTrack": null,
  "onError": null,
  "onReady": null,
  "pageTrackerEnabled": true,
  "pageTrackerExcludedRoutes": [],
  "pageTrackerPrependBase": true,
  "pageTrackerScreenviewEnabled": false,
  "pageTrackerSkipSamePath": true,
  "pageTrackerTemplate": null,
  "pageTrackerUseFullPath": false,
}
`;
